--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
 Test file!
 
-<pre class="script">
-&lt;head&gt;
-&lt;link href="//cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.css" media="screen" rel="stylesheet" type="text/css" /&gt;
-&lt;script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.js"&gt;&lt;/script&gt;
-&lt;/head&gt;</pre>
+<html>
+<head><title></title> 
 
-<pre class="script-jem">
+<script type="text/javascript">
 $(document).ready(function() {
 $(".fancybox").fancybox();
-});
-</pre>
+});</script>
 
-<p><a class="fancybox external" href="http://farm4.staticflickr.com/3712/9032543579_1217e6566b_b.jpg" id="single_1" title="Singapore from the air (Andrew Tan 2011)"><img alt="" src="http://farm4.staticflickr.com/3712/9032543579_1217e6566b_m.jpg" /> </a></p>
+<link href="//cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.css" media="screen" rel="stylesheet" type="text/css" />
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.js"></script>
+</head>
+
+
+
+
+<body>
+
+
+
+
+<p><a class="fancybox external" href="http://farm4.staticflickr.com/3712/9032543579_1217e6566b_b.jpg" id="single_1" title="Singapore from the air (Andrew Tan 2011)"><img alt="" src="http://farm4.staticflickr.com/3712/9032543579_1217e6566b_m.jpg" /> </a></p></body>
+</html>
